--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,7 @@ wrapt==1.17.2
 yarl==1.18.3
 openai~=1.62.0
 anthropic~=0.45.2
+gspread==3.7.*
+gspread-asyncio~=1.4.0
+google-auth~=2.36.0
+google-auth-oauthlib~=1.2.1
