--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Environment files with secrets
+.env
+.env.*
+env.production
+
+# Google Sheets credentials
+google_sheets_credentials.json
+bitrix24/google_sheets_credentials.json
+
 # Python
 __pycache__/
 *.py[cod]
