--- a/callchecker-recognition.service
+++ b/callchecker-recognition.service
@@ -8,7 +8,7 @@ Type=simple
 User=callchecker
 Group=callchecker
 WorkingDirectory=/home/callchecker/callchecker
-Environment=PATH=/home/callchecker/callchecker/venv/bin
+Environment=PATH=/home/callchecker/callchecker/venv/bin:/usr/local/bin:/usr/bin:/bin
 ExecStart=/home/callchecker/callchecker/venv/bin/python dialogue_recognition.py
 Restart=always
 RestartSec=10
